--- a/application/views/scripts/index/show.phtml
+++ b/application/views/scripts/index/show.phtml
@@ -9,7 +9,7 @@
 <div style="width: 100%">
 <h1 align="center">所有用户信息</h1>
 <a href="showday?day=1">今天</a>
-<table style="border: 1px solid;">
+<table style="border: 1px solid; width: 100%">
 <tr><td>发送用户</td><td>内容</td><td>发送时间</td><td>操作</td></tr>
 <?php foreach ($this->res as $value) {?>
 <tr><td class="name" onmouseover="getname('<?=$value["FromUserName"];?>')"><?=$value["FromUserName"]; ?></td><td><?=$value["Content"]; ?></td>
