--- a/application/views/scripts/news/addnews.phtml
+++ b/application/views/scripts/news/addnews.phtml
@@ -6,9 +6,21 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 </head>
 <body>
+<div align="center">
+<h1>
+添加文章
+</h1>
+</div>
+<div align="center">
 <form enctype="multipart/form-data" action="chkaddnews" method="post">
-<input type="file" name="file">
+选择推送图片<input type="file" name="file">  建议360*200
+<br/>
+文章标题<input type="text" name="Title">
+<br/>
+文章简介<input type="text" name="Description">
+<br/>
 <input type="submit" value="提交">
 </form>
+</div>
 </body>
 </html>
