--- a/application/views/scripts/index/showmember.phtml
+++ b/application/views/scripts/index/showmember.phtml
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>查看信息</title>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<script type="text/javascript" src="http://zhl.besteee.com/js/jquery-min.js"></script>
 </head>
 <body>
 <div style="width: 100%;">
@@ -16,5 +16,8 @@
 <?php }?>
 </table>
 </div>
+<script type="text/javascript">
+$("td").css("border","1px solid");
+</script>
 </body>
 </html>
